Fix header spacing.

--- a/styles.css
+++ b/styles.css
@@ -33,11 +33,12 @@ p {
 
 #header {
   text-align: center;
+  padding-bottom: 25px;
 }
 
 #topBorder {
   position: fixed;
-  gop: 0;
+  top: 0;
   left: 0;
   height: 50px;
   width: 100%;
